# Enigma

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Clean.bat  Clean.sh  CppCheck-Static-Analysis-Report.txt  CppCheckReport.txt  Doxyfile  Doxyfile.in  Enigma.make  Enigma.rc  Enigma.rc.in  Gen-Doxygen-Docs.bat  Gen-Linux-GMake2.sh  Gen-Linux-Makefile.sh  Gen-MacOS-XCode.sh  Gen-Windows-Makefile.bat  Gen-Windows-vs2019.bat  LICENSE.md  Linux-Build-Release.sh  Makefile  NOTES.txt  README.md  Static  Static-Analysis-Report.txt  TODO.txt  Tests.hpp  Windows-Build-Release.bat  _a_e_s_8hpp.html  _a_e_s_8hpp.js  _a_e_s_8hpp_source.html  _algorithm_8hpp.html  _algorithm_8hpp.js  _algorithm_8hpp_source.html  _application_8hpp.html  _application_8hpp_source.html  _application_event_8hpp.html  _application_event_8hpp_source.html  (+698 more)
.github/codeql/: codeql-config.yml
.github/workflows/: build-docs.yml  build-linux.yml  build-ubuntu-clang-tests.yml  build-ubuntu-clang.yml  build-ubuntu-gcc-tests.yml  build-ubuntu-gcc.yml  build-ubuntu.yml  build-windows-mingw-tests.yml  build-windows-mingw.yml  build-windows-msvc-tests.yml  build-windows-msvc.yml  build-windows.yml  build.yml  codeql-analysis.yml  codeql-static-analysis.yml  static-analysis.yml
Backups/: RSAScene.cpp  RSAScene.hpp
Backups/RSA/: RSA.cpp  RSA.hpp
Backups/Translation/: Translation.cpp  Translation.hpp
Dependencies/asio/: premake5.lua
Dependencies/catch2/: Makefile  premake5.lua
Dependencies/cpr/: Makefile  premake5.lua
Dependencies/cryptopp/: .travis.yml  Doxyfile  Install.txt  Makefile  Readme.txt  bench3.cpp  cpu.cpp  cryptlib.cpp  cryptopp.rc  files.cpp  filters.cpp  gcm_simd.cpp  lea_simd.cpp  nbtheory.cpp  premake5.lua  validat3.cpp
Dependencies/curl/: Makefile  premake5.lua
Dependencies/cxxopts/: Makefile  premake5.lua
Dependencies/glad/: Makefile  premake5.lua
Dependencies/glfw/: Makefile  premake5.lua
Dependencies/googletest/: premake5.lua
Dependencies/imgui/: Makefile  premake5.lua
Dependencies/infoware/: Makefile  premake5.lua
Dependencies/inih/: Makefile  premake5.lua
Dependencies/json/: Makefile  premake5.lua
Dependencies/mbedtls/: Makefile  premake5.lua
Dependencies/pfd/: Makefile  premake5.lua
Dependencies/spdlog/: Makefile  premake5.lua
Dependencies/sqlitecpp/: LICENSE.txt  Makefile  premake5.lua
Dependencies/stb_image/: Makefile  premake5.lua
Dependencies/tabulate/: Makefile  premake5.lua
Dependencies/zlib/: Makefile  premake5.lua
Docs/: index.html
Enigma/: premake5.lua
Enigma Application/: imgui.ini  premake5.lua
Scripts/: Clean.bat  Clean.sh  Gen-Doxygen-Docs.bat  Gen-Linux-Makefile.sh  Gen-MacOS-XCode.sh  Gen-Windows-Makefile.bat  Gen-Windows-vs2019.bat  Gen-Windows-vs2022.bat  Linux-Build-Release.sh  TODO.txt  Windows-Build-Release.bat
Source/: Enigma.cpp  Enigma.hpp  Main.cpp  pch.hpp
cmake/: cryptopp.cmake  deps.cmake  install.cmake
docs/: _a_e_s_8hpp_source.html  _a_e_s_tests_8hpp.html  _algorithm_8cpp.js  _application_8hpp.html  _application_8hpp_source.html  _application_event_8hpp.html  _application_event_8hpp.js  _base64_tests_8hpp.js  _blowfish_8hpp.js  _c_h_a_n_g_e_l_o_g_8md.html  _c_l_i_8hpp.html  _c_l_i_8hpp_source.html  _cha_cha20_poly1305_8hpp_source.html  _cipher_8hpp.js  _clipboard_8hpp_source.html  _config_8hpp_source.html  _crypto_p_p_utils_8hpp.js  _cursor_8hpp.js  _cursor_8hpp_source.html  _database_8hpp_source.html  _decrypt_text_scene_8hpp.html  _decrypt_text_scene_8hpp_source.html  _e_n_v_8hpp.html  _e_n_v_8hpp.js  _encrypt_text_scene_8hpp.html  _encryption_8hpp.js  _enigma_8hpp.js  _enigma_8hpp_source.html  _event_8hpp.js  _file_utils_tests_8hpp_source.html  _g_zip_8cpp.js  _hashing_tool_8hpp.js  _i_d_e_a_8cpp.html  _i_d_e_a_tests_8hpp.js  _im_gui_renderer_8hpp.html  _im_gui_widgets_8hpp.html  _key_codes_8hpp.js  _key_event_8hpp.html  _key_event_8hpp_source.html  _l_i_c_e_n_s_e_8md.html  (+116 more)
lib/imgui/: CMakeLists.txt  Makefile
lib/imgui/backends/: imgui_impl_opengl3_loader.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  (+140 more)
src/: Enigma.hpp  Main.cpp  pch.hpp
tests/: CMakeLists.txt  TestsData.hpp  tests_main.cpp
tests/Algorithm/: AESTests.hpp  BlowfishTests.hpp  ChaCha20Poly1305Tests.hpp  IDEATests.hpp  RSATests.hpp  TripleDESTests.hpp  TwofishTests.hpp
tests/Database/: CRUD.hpp
tests/Utils/: Base64Tests.hpp  FileUtilsTests.hpp
tests/src/: TestsAll.hpp  TestsData.hpp  tests_main.cpp
tests/src/Crypto/: AESTests.hpp  BlowfishTests.hpp  CamelliaTests.hpp  ChaCha20Poly1305Tests.hpp  IDEATests.hpp  RSATests.hpp  SerpentTests.hpp  TripleDESTests.hpp  TwofishTests.hpp
tests/src/DB/: CRUD.hpp
tests/src/Endianness/: EndiannessTests.hpp
tests/src/Utils/: Base64Tests.hpp  FileUtilsTests.hpp  GZipTests.hpp  HashTests.hpp
tests/test_data/: file.bin.sha256  file.bin.sha512  file_AES.bin.enigma  file_Blowfish.bin.enigma  file_Camellia.bin.enigma  file_ChaCha20Poly1305.bin.enigma  file_IDEA.bin.enigma  file_RSA.bin.enigma  file_RSA_PrivateKey.pem  file_RSA_PublicKey.pem  file_Serpent.bin.enigma  file_TripleDES.bin.enigma  file_Twofish.bin.enigma  lorem_ipsum_AES.txt.enigma  lorem_ipsum_Blowfish.txt.enigma  lorem_ipsum_Camellia.txt.enigma  lorem_ipsum_ChaCha20Poly1305.txt.enigma  lorem_ipsum_IDEA.txt.enigma  lorem_ipsum_RSA.txt.enigma  lorem_ipsum_RSA_PrivateKey.pem  lorem_ipsum_RSA_PublicKey.pem  lorem_ipsum_Serpent.txt.enigma  lorem_ipsum_TripleDES.txt.enigma  lorem_ipsum_Twofish.txt.enigma  text_file.txt
tests/test_data/legacy/: lorem_ipsum_AES.txt.enigma  lorem_ipsum_Blowfish.txt.enigma  lorem_ipsum_IDEA.txt.enigma  lorem_ipsum_RSA.txt.enigma  lorem_ipsum_RSA_PublicKey.pem
(+1722 files in other folders)
